--- a/CarPark/CarPark/CarPark.csproj
+++ b/CarPark/CarPark/CarPark.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chassis.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="EngineTypeEnum.cs" />
     <Compile Include="Program.cs" />
