--- a/InterfacesAndAbstractClasses/InterfacesAndAbstractClasses/InterfacesAndAbstractClasses.csproj
+++ b/InterfacesAndAbstractClasses/InterfacesAndAbstractClasses/InterfacesAndAbstractClasses.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bird.cs" />
+    <Compile Include="Coordinate.cs" />
+    <Compile Include="Flying.cs" />
+    <Compile Include="IFlyable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Randomizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
