--- a/InterfacesAndAbstractClasses/InterfacesAndAbstractClasses/InterfacesAndAbstractClasses.csproj
+++ b/InterfacesAndAbstractClasses/InterfacesAndAbstractClasses/InterfacesAndAbstractClasses.csproj
@@ -45,8 +45,10 @@
   <ItemGroup>
     <Compile Include="Bird.cs" />
     <Compile Include="Coordinate.cs" />
+    <Compile Include="Drone.cs" />
     <Compile Include="Flying.cs" />
     <Compile Include="IFlyable.cs" />
+    <Compile Include="Plane.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Randomizer.cs" />
