--- a/CarPark/CarPark/CarPark.csproj
+++ b/CarPark/CarPark/CarPark.csproj
@@ -47,11 +47,13 @@
     <Compile Include="Chassis.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="EngineType.cs" />
+    <Compile Include="Models\VehicleModel.cs" />
     <Compile Include="PassengerCar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
     <Compile Include="Scooter.cs" />
+    <Compile Include="Serializers\Serializer.cs" />
     <Compile Include="TransmissionManufacturers.cs" />
     <Compile Include="Transmission.cs" />
     <Compile Include="TransmissionType.cs" />
