--- a/CarPark/CarPark/CarPark.csproj
+++ b/CarPark/CarPark/CarPark.csproj
@@ -43,22 +43,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bus.cs" />
-    <Compile Include="Chassis.cs" />
-    <Compile Include="Engine.cs" />
-    <Compile Include="EngineType.cs" />
+    <Compile Include="Vehicles\Bus.cs" />
+    <Compile Include="SpareParts\Chassis.cs" />
+    <Compile Include="SpareParts\Engine.cs" />
+    <Compile Include="Enums\EngineType.cs" />
     <Compile Include="Models\VehicleModel.cs" />
-    <Compile Include="PassengerCar.cs" />
+    <Compile Include="Vehicles\PassengerCar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
-    <Compile Include="Scooter.cs" />
+    <Compile Include="Vehicles\Scooter.cs" />
     <Compile Include="Serializers\Serializer.cs" />
-    <Compile Include="TransmissionManufacturers.cs" />
-    <Compile Include="Transmission.cs" />
-    <Compile Include="TransmissionType.cs" />
-    <Compile Include="Truck.cs" />
-    <Compile Include="Vehicle.cs" />
+    <Compile Include="Enums\TransmissionManufacturers.cs" />
+    <Compile Include="SpareParts\Transmission.cs" />
+    <Compile Include="Enums\TransmissionType.cs" />
+    <Compile Include="Vehicles\Truck.cs" />
+    <Compile Include="Vehicles\Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
