Change some tests.

--- a/NumberSystem/NumberSystem/NumberSystem.csproj
+++ b/NumberSystem/NumberSystem/NumberSystem.csproj
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converter.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="NumberSystemConvertor.cs" />
+    <Compile Include="NumberSystemConvertorEntryPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
