--- a/CarGarage/CarGarage/CarGarage.csproj
+++ b/CarGarage/CarGarage/CarGarage.csproj
@@ -43,7 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Basic\Car.cs" />
+    <Compile Include="Basic\Garage.cs" />
+    <Compile Include="Commands\AveragePriceCommand.cs" />
+    <Compile Include="Commands\AveragePriceTypeCommand.cs" />
+    <Compile Include="Commands\CountAllCommand.cs" />
+    <Compile Include="Commands\CountTypesCommand.cs" />
+    <Compile Include="Commands\ExitCommand.cs" />
+    <Compile Include="Interfaces\ICommand.cs" />
+    <Compile Include="CarGarageEntryPoint.cs" />
+    <Compile Include="Invokers\Invoker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
