--- a/DevelopmentAndBuildTools/DevelopmentAndBuildTools/DevelopmentAndBuildTools.csproj
+++ b/DevelopmentAndBuildTools/DevelopmentAndBuildTools/DevelopmentAndBuildTools.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CharacterCounter.cs" />
     <Compile Include="CharacterCounterEntryPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
