--- a/MailWebDriver/GoogleMailModel/GoogleMailModel.csproj
+++ b/MailWebDriver/GoogleMailModel/GoogleMailModel.csproj
@@ -51,11 +51,19 @@
   <ItemGroup>
     <Compile Include="GoogleMailModelEntryPoint.cs" />
     <Compile Include="Pages\BasePage.cs" />
+    <Compile Include="Pages\HomePage.cs" />
+    <Compile Include="Pages\LoginPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Waiters\Waiters.csproj">
+      <Project>{59f211cc-aee1-4322-8d0e-535a225b0b7a}</Project>
+      <Name>Waiters</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.Chrome.WebDriver.85.0.0\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('..\packages\Selenium.Chrome.WebDriver.85.0.0\build\Selenium.Chrome.WebDriver.targets')" />
