--- a/MailWebDriver/MailRuModel/MailRuModel.csproj
+++ b/MailWebDriver/MailRuModel/MailRuModel.csproj
@@ -52,7 +52,9 @@
     <Compile Include="MailRuModelEntryPoint.cs" />
     <Compile Include="Pages\BasePage.cs" />
     <Compile Include="Pages\HomePage.cs" />
+    <Compile Include="Pages\InboxPage.cs" />
     <Compile Include="Pages\LoginPage.cs" />
+    <Compile Include="Pages\PersonalDataPage.cs" />
     <Compile Include="Pages\WriteLetterPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
