--- a/MailWebDriver/GoogleMailModel/GoogleMailModel.csproj
+++ b/MailWebDriver/GoogleMailModel/GoogleMailModel.csproj
@@ -52,6 +52,7 @@
     <Compile Include="GoogleMailModelEntryPoint.cs" />
     <Compile Include="Pages\BasePage.cs" />
     <Compile Include="Pages\HomePage.cs" />
+    <Compile Include="Pages\InboxPage.cs" />
     <Compile Include="Pages\LoginPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
