Add NicknameChange_CorrectChange_ReturnTrue method to NicknameChangeTests class, MailWebDriverTests project.

--- a/MailWebDriver/MailWebDriverTests/MailWebDriverTests.csproj
+++ b/MailWebDriver/MailWebDriverTests/MailWebDriverTests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GoogleMailModel\GoogleMailModel.csproj" />
     <ProjectReference Include="..\MailRuModel\MailRuModel.csproj" />
   </ItemGroup>
 
