--- a/WebDriverMailAutomation/MailRu/Mail.csproj
+++ b/WebDriverMailAutomation/MailRu/Mail.csproj
@@ -12,6 +12,8 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,19 +35,61 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WebDriver, Version=3.141.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.WebDriver.3.141.0\lib\net45\WebDriver.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\Letter.cs" />
+    <Compile Include="Base\Response.cs" />
+    <Compile Include="Base\User.cs" />
+    <Compile Include="Base\BasePage.cs" />
+    <Compile Include="Gmail\Home\HomePage.cs" />
+    <Compile Include="Gmail\Home\SidebarWindow.cs" />
+    <Compile Include="Gmail\Inbox\InboxLettersWindow.cs" />
+    <Compile Include="Gmail\Inbox\InboxPage.cs" />
+    <Compile Include="Gmail\Inbox\LetterWindow.cs" />
+    <Compile Include="Gmail\Inbox\ReplyWindow.cs" />
+    <Compile Include="Gmail\Login\EnterPasswordWindow.cs" />
+    <Compile Include="Gmail\Login\LoginAccountWindow.cs" />
+    <Compile Include="Gmail\Login\LoginPage.cs" />
+    <Compile Include="MailRu\Home\UserDataSidebarWindow.cs" />
+    <Compile Include="MailRu\Home\HomePage.cs" />
+    <Compile Include="MailRu\Home\SidebarWindow.cs" />
+    <Compile Include="MailRu\Inbox\InboxPage.cs" />
+    <Compile Include="MailRu\Inbox\LetterWindow.cs" />
+    <Compile Include="MailRu\Login\EnterPasswordWindow.cs" />
+    <Compile Include="MailRu\Login\LoginAccountWindow.cs" />
+    <Compile Include="MailRu\Login\LoginPage.cs" />
+    <Compile Include="MailRu\PersonalData\PersonalDataPage.cs" />
+    <Compile Include="MailRu\WriteLetter\EditorContainerWindow.cs" />
+    <Compile Include="MailRu\WriteLetter\HeadContainerWindow.cs" />
+    <Compile Include="MailRu\WriteLetter\WriteLetterPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Gmail\" />
-    <Folder Include="MailRu\" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Waiter\Waiter.csproj">
+      <Project>{a69d4775-26ac-42d6-a2a1-113d5743a365}</Project>
+      <Name>Waiter</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Selenium.Chrome.WebDriver.85.0.0\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('..\packages\Selenium.Chrome.WebDriver.85.0.0\build\Selenium.Chrome.WebDriver.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>Данный проект ссылается на пакеты NuGet, отсутствующие на этом компьютере. Используйте восстановление пакетов NuGet, чтобы скачать их.  Дополнительную информацию см. по адресу: http://go.microsoft.com/fwlink/?LinkID=322105. Отсутствует следующий файл: {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Selenium.Chrome.WebDriver.85.0.0\build\Selenium.Chrome.WebDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.Chrome.WebDriver.85.0.0\build\Selenium.Chrome.WebDriver.targets'))" />
+  </Target>
 </Project>
