--- a/WebDriverMailAutomation/MailRu/packages.config
+++ b/WebDriverMailAutomation/MailRu/packages.config
@@ -1,7 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.16.0" targetFramework="net472" />
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net472" />
+  <package id="IKVM" version="8.1.5717.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net472" />
+  <package id="NLog" version="4.7.10" targetFramework="net472" />
+  <package id="NLog.Config" version="4.7.10" targetFramework="net472" />
+  <package id="NLog.Schema" version="4.7.10" targetFramework="net472" />
+  <package id="NUnit" version="3.12.0" targetFramework="net472" />
   <package id="Selenium.Chrome.WebDriver" version="85.0.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
   <package id="SharpZipLib" version="1.3.2" targetFramework="net472" />
@@ -11,4 +20,5 @@
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net472" />
   <package id="WebDriverManager" version="2.11.2" targetFramework="net472" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net472" />
 </packages>
