--- a/MailTestAutomationFramework/Mail/packages.config
+++ b/MailTestAutomationFramework/Mail/packages.config
@@ -2,7 +2,12 @@
 <packages>
   <package id="AngleSharp" version="0.16.0" targetFramework="net472" />
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net472" />
+  <package id="DotNetSeleniumExtras.PageObjects.Core" version="3.12.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="NLog" version="4.7.10" targetFramework="net472" />
+  <package id="NLog.Config" version="4.7.10" targetFramework="net472" />
+  <package id="NLog.Schema" version="4.7.10" targetFramework="net472" />
   <package id="NUnit" version="3.13.2" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
   <package id="SharpZipLib" version="1.3.2" targetFramework="net472" />
